[project]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Advent of code 2023"
authors = [
    { name = "sslivnick", email = "steven.slivnick@gmail.com" }
]
dependencies = [
    "pytest>=8.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/advent_of_code_2023"]
